--- a/magunkrol.html
+++ b/magunkrol.html
@@ -4,7 +4,7 @@
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Élménypedagógia.com || Főoldal</title>
+  <title>Élménypedagógia.com || Magunkról</title>
   <link rel="stylesheet" href="css/style.css" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Cardo" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
@@ -85,10 +85,10 @@
       <h1>Dr. habil Demszky Alma Míra</h1>
       <h3>Szociológus-pszichológus, egyetemi tanár, Montessori gyógypedagógus</h3>
       <p class="intro">Szociológus-pszichológus vagyok, egyetemi tanár, az Eszterházy Károly Egyetem gyöngyösi és egri campusain oktatok. Szakmai pályafutásom során sok kultúrával és országgal volt alkalmam megismerkedni, mivel Magyarországon, Svájcban és Németországban végeztem egyetemi tanulmányaimat, Németországban – Chemnitzben – doktoráltam, majd Budapesten az ELTE-n habilitáltam.</p>
-      <p id="show" class="intro">Sok évig a müncheni Ludwig Maximilian Egyetemen is kutattam és oktattam. Kutatásvezető voltam egy hat éves Európai Uniós kutatásban, mely az európai országok oktatási és egészségügyi rendszerét hasonlította össze.
+      <p id="show1" class="intro">Sok évig a müncheni Ludwig Maximilian Egyetemen is kutattam és oktattam. Kutatásvezető voltam egy hat éves Európai Uniós kutatásban, mely az európai országok oktatási és egészségügyi rendszerét hasonlította össze.
 Ekkor ismerkedtem meg mélyebben az inkluzív reformpedagógia, valamint az élménypedagógia eszméivel. Betekintést nyertem különböző nyugat európai országok oktatási rendszerébe, ahol nem a korai szelekció, elkülönítés, szegregáció a cél, hanem az „együtt nevelés”, az esélyegyenlőség megteremtése. Mély benyomást tett rám, hogy az iskola nemcsak a gyerekek címkézéséről, későbbi életesélyeinek már hat éves korukban történő behatárolásáról szólhat, hanem valós esélyt is teremthet a különböző családi háttérből származó előnyök és hátrányok kiegyenlítésére. Találkoztam olyan iskolarendszerekkel, ahol a gyerekeket nem egy egységes mércéhez, sablonhoz akarják igazítani, mint hajdanán a kínai hadsereg agyagedényekben nevelt katonáit, hanem különbözőségüket, valós és eszmei „sokszínűségüket” előnyként, gazdagságként kezelik.
 A külföldön szerzett tapasztalataimat szeretném Magyarországon minél szélesebb körben gyümölcsöztetni, azért a Kinderzentrum München-ben elvégeztem egy Montessori gyógypedagógiai képzést. Sok éve foglalkozom különböző szociális és egészségi hátterű gyerekekkel, munkám során az élménypedagógia módszertana a kiindulópontom. A külföldi és itthoni kutatásaimból szerzett tudást sikeresen kamatoztatom gyakorlati munkám során, mind gyerekekkel, mind felnőttekkel.</p>
-      <button id="less" onclick="showMore()">Több</button>
+      <button id="less1" onclick="showMore('show1','less1')">Több</button>
     </div>
 
     <hr>
@@ -102,12 +102,16 @@ A külföldön szerzett tapasztalataimat szeretném Magyarországon minél szél
 
     <div id="vb" class="portfolio">
       <h1>Ifjúsági Tanácsadó Testület</h1>
-      <p class="intro">Legnagyobb kincsünk, erőforrásunk és tudásbázisunk saját gyermekeink. Ők szenvedik el jól-rosszul sikerülő nevelési kísérleteinket, igazítják ki hibáinkat és nevelnek minket – valószínűleg még hatékonyabban, mint mi neveljük őket</p>
-      <p id="show" class="intro">
-        Nagyobb, immár felnőtt gyermekeink nap mint nap szemünk elé vetítik az idő visszafordíthatatlan múlását és tudatossá teszik bennünk az együtt töltött idő fontosságát, melyből oly kevés van. Valós tartalommal töltik meg a „retroaktív szocializáció” elvont szakmai fogalmát: A világ számtalan területén, például a digitális világban oly otthonosan mozognak, minket a kétségbevonhatatlan fölényből fakadó türelemmel oktatgatva, mint mikor még mi óvtuk-védtük első csetlő-botló lépéseiket. Így fordulnak meg az erőviszonyok, és ennek belátására felnövő gyermekeink nélkül valószínűleg nem lennénk képesek. Két lábon járó lelkiismeretként könyörtelenül szembesítenek minket hibáinkkal, és olykor, nagy néha, még egy-két sikert is elismernek. Megnevettetnek és megríkatnak, közlik velünk, hogy mikor vagyunk hülyék, és miért „ciki” velünk elmenni társaságba.
-        Kisebb gyermekeink a csodalátásra tanítanak minket: Arra, hogy minden kinyíló rügy, hangya, cserebogár a teremtés csodája. Amire felnőttként csak rálépnénk, azt felveszik, megcsodálják, gyönyörködnek benne – így tanítva minket is „látni” és észrevenni. Nem térnek oly könnyen napirendre sem öröm, sem bánat felett, mint mi felnőttek, nekik a jelen pillanat maga a végtelenség. Bár biztos vagyok benne, hogy sajnos nem tudjuk teljesen az ő szemükkel látni a világot, de törekszünk minél többet tanulni tőlük.
-        Patchwork család lévén összesen kilenc gyermekünk van, és jelenleg egy nevelt kisfiú. Születési sorrendben: Kíra (1995), Bendegúz (1999), Áfonya (2001), Saphíra (2003), Kadosa (2003), Leander (2005), Imola (2010), Ádám (2010), Csellő (2014) és Bulcsú (2014).
-      </p>
+      <p class="intro">Legnagyobb kincsünk, erőforrásunk és tudásbázisunk saját gyermekeink. Ők szenvedik el jól-rosszul sikerülő nevelési kísérleteinket, igazítják ki hibáinkat és nevelnek minket – valószínűleg még hatékonyabban, mint mi neveljük őket.</p>
+      <div id="show2" style="text-align: center;">
+        <img src="images/ifju.jpg" alt="Header" style="width: 90%;">
+        <p class="intro">
+          Nagyobb, immár felnőtt gyermekeink nap mint nap szemünk elé vetítik az idő visszafordíthatatlan múlását és tudatossá teszik bennünk az együtt töltött idő fontosságát, melyből oly kevés van. Valós tartalommal töltik meg a „retroaktív szocializáció” elvont szakmai fogalmát: A világ számtalan területén, például a digitális világban oly otthonosan mozognak, minket a kétségbevonhatatlan fölényből fakadó türelemmel oktatgatva, mint mikor még mi óvtuk-védtük első csetlő-botló lépéseiket. Így fordulnak meg az erőviszonyok, és ennek belátására felnövő gyermekeink nélkül valószínűleg nem lennénk képesek. Két lábon járó lelkiismeretként könyörtelenül szembesítenek minket hibáinkkal, és olykor, nagy néha, még egy-két sikert is elismernek. Megnevettetnek és megríkatnak, közlik velünk, hogy mikor vagyunk hülyék, és miért „ciki” velünk elmenni társaságba.
+          Kisebb gyermekeink a csodalátásra tanítanak minket: Arra, hogy minden kinyíló rügy, hangya, cserebogár a teremtés csodája. Amire felnőttként csak rálépnénk, azt felveszik, megcsodálják, gyönyörködnek benne – így tanítva minket is „látni” és észrevenni. Nem térnek oly könnyen napirendre sem öröm, sem bánat felett, mint mi felnőttek, nekik a jelen pillanat maga a végtelenség. Bár biztos vagyok benne, hogy sajnos nem tudjuk teljesen az ő szemükkel látni a világot, de törekszünk minél többet tanulni tőlük.
+          Patchwork család lévén összesen kilenc gyermekünk van, és jelenleg egy nevelt kisfiú. Születési sorrendben: Kíra (1995), Bendegúz (1999), Áfonya (2001), Saphíra (2003), Kadosa (2003), Leander (2005), Imola (2010), Ádám (2010), Csellő (2014) és Bulcsú (2014).
+        </p>
+    </div>
+      <button id="less2" onclick="showMore('show2','less2')">Több</button>
     </div>
   </div>
 </div>
