--- a/szolgaltatas.html
+++ b/szolgaltatas.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Élménypedagógia.com || Főoldal</title>
+  <title>Élménypedagógia.com || Szolgáltatás</title>
 
   <link rel="stylesheet" href="css/style.css" type="text/css" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Cardo" rel="stylesheet">
