--- a/tanya.html
+++ b/tanya.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Élménypedagógia.com || Főoldal</title>
+  <title>Élménypedagógia.com || Tanya</title>
 
   <link rel="stylesheet" href="css/style.css" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Cardo" rel="stylesheet">
@@ -260,6 +260,7 @@
 
     <section class="sectionFil wrapper">
       <h1 style="font-family: 'Love Ya Like A Sister', cursive; font-size: 50px">Lovaink</h1>
+      <img class="floatImgP right" src="images/lovak.jpg">
       <ul style="text-align: left;"> Izlandi lovak:
         <li>Fidla fra Tjaldanesi &#9792;</li>
         <li>lánya, Freya fra Bru &#9792;</li>
